Update unit tests to Junit 5 in line with latest OpenMRS release